<resources>
    <string name="app_name">Targit</string>
    <string name="action_settings">Instellingen</string>
    <string name="title_activity_settings">Instellingen</string>

    <string name="title_activity_highscore">Highscore</string>
    <string name="title_activity_info_game_mode">InfoGameModeActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="info_memorit">Memorit</string>
    <string name="info_zenit">zenit</string>
    <string name="info_smashit">smashit</string>
    <string name="settings_about">dit is de about page, welkom bij onze app</string>
    <string name="title_activity_game_over">GameOverActivity</string>

    <string name="main_button_highscore">HiGHSCORE</string>

    <string name="smashit_easy">Traag</string>
    <string name="smashit_medium">Matig</string>
    <string name="smashit_medium_caps">MATiG</string>
    <string name="smashit_hard">Snel</string>
    <!--<string name="smashit_info_button_matig">MATiG</string>-->

    <string name="zenit_easy">30 seconden</string>
    <string name="zenit_medium">60 seconden</string>
    <string name="zenit_hard">90 seconden</string>

    <string name="memorit_easy">5 levens</string>
    <string name="memorit_medium">3 levens</string>
    <string name="memorit_hard">1 leven</string>

    <string name="stop">stop</string>
    <string name="status_bluetooth_status">Status</string>
    <string name="status_bluetooth_knoppen">Knoppen</string>
    <string name="status_search_buttons">Zoek knoppen</string>

    <string name="info_text_line_marker">•</string>

    <string name="smashit_info_text_1">Levens:</string>
    <string name="smashit_info_text_2">Druk op de opgelichte knop.</string>
    <string name="smashit_info_text_3">Je verliest een leven wanneer je op een niet opgelichte knop drukt of als je te laat op de opgelichte knop drukt.</string>
    <string name="smashit_info_text_4">Je krijgt 1 punt als je op de opgelichte knop drukt.</string>

    <string name="zenit_info_text_1">Druk op de knop die oplicht.</string>
    <string name="zenit_info_text_2">De volgende knop licht pas op als je op de opgelichte knop drukt.</string>
    <string name="zenit_info_text_3">Je krijgt 1 punt als je op de knop drukt die oplicht.</string>
    <string name="zenit_info_text_4">Je speelt voor een bepaalde tijdsduur.</string>

    <string name="memorit_info_text_1">Er wordt een patroon afgespeeld.</string>
    <string name="memorit_info_text_2">Na dat het patroon is afgespeeld moet je het patroon nadoen.</string>
    <string name="memorit_info_text_3">Het patroon word elke keer langer.</string>
    <string name="memorit_info_text_4">Je verliest een leven als je het patroon verkeerd herhaald hebt.</string>

    <string name="save_score_title">Score Opslaan</string>
    <string name="save_score_input_field_name">Naam</string>
    <string name="save_score_save">Opslaan</string>
    <string name="save_score_cancle">Annuleren</string>


    <string name="game_over_button_menu">Menu</string>
    <string name="game_over_button_again">Opnieuw</string>

    <string name="about_title_made_by">Gemaakt door Targit Team</string>
    <string name="about_made_by_name_1">Ataç Tarik</string>
    <string name="about_made_by_name_2">Missiaen Matthijs</string>
    <string name="about_made_by_name_3">Robersscheuten Downey</string>
    <string name="about_made_by_name_4">William Verhaeghe</string>

    <string name="about_title_credit">Credit</string>
    <string name="about_credit_line_1">Created by Dooder - Freepik.com</string>
    <string name="about_credit_line_2">Vecteezy.com</string>
    <string name="about_credit_line_3">Created by D3images - Freepik.com</string>
    <string name="about_credit_line_4">Made by Dmitriy Prodchenko</string>
    <string name="about_credit_line_5">Point sound: soundjay.com</string>
    <string name="about_credit_line_6">Game over sound: Joe Lamb </string>
    <string name="skip">Sluiten</string>

    <string name="smashit_info_anim_text_2">Je verliest een leven wanneer je telaat op een opgelichte knop drukt.</string>
    <string name="smashit_info_anim_text_3">Je verliest een leven wanneer je op een verkeerde knop drukt.</string>
    <string name="zenit_info_anim_text_1">Druk op de knop die licht geeft. Vervolgens zal de volgende knop branden.</string>
    <string name="memorit_info_anim_text_1">Volg het voorgetoonde patroon.</string>
    <string name="memorit_info_anim_text_2">Als je het patroon fout hebt verlies je een leven.</string>
    <string name="ok">OK</string>
</resources>
