<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.howest.nmct.targit.views.highscore.MemoritHighscoreFragment">

    <FrameLayout
        android:id="@+id/framelayout_in_fragment_memorit_highscore"
        android:layout_width="0dp"
        app:layout_widthPercent="45%"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"

        />
    <View
        android:id="@+id/fragment_memorit_highscore_view"
        android:layout_width="0dp"
        app:layout_widthPercent="65%"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/fragment_memorit_highscore_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="12%"
        app:layout_heightPercent="7%"
        android:background="@drawable/green_postit_selected"
        android:text="@string/memorit_easy"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/fragment_memorit_highscore_view"
        android:layout_alignTop="@id/framelayout_in_fragment_memorit_highscore"
        />

    <Button
        android:id="@+id/fragment_memorit_highscore_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="12%"
        app:layout_heightPercent="7%"
        android:background="@drawable/orange_postit"
        android:text="@string/memorit_medium"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/fragment_memorit_highscore_view"
        android:layout_below="@id/fragment_memorit_highscore_easy"
        />

    <Button
        android:id="@+id/fragment_memorit_highscore_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="12%"
        app:layout_heightPercent="7%"
        android:background="@drawable/red_postit"
        android:text="@string/memorit_hard"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/fragment_memorit_highscore_view"
        android:layout_below="@id/fragment_memorit_highscore_medium"
        />

</android.support.percent.PercentRelativeLayout>