<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.howest.nmct.targit.views.highscore.ZenitHighscoreFragment">

    <View
        android:id="@+id/fragment_zenit_highscore_top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="5%"/>

    <FrameLayout
        android:id="@+id/framelayout_in_fragment_zenit_highscore"
        android:layout_width="0dp"
        app:layout_widthPercent="51%"
        android:layout_height="match_parent"
        app:layout_heightPercent="100%"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_zenit_highscore_top_view"
        />
    <View
        android:id="@+id/fragment_zenit_highscore_view"
        android:layout_width="0dp"
        app:layout_widthPercent="67%"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/fragment_zenit_highscore_view_selected"
        android:layout_width="0dp"
        app:layout_widthPercent="66%"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/fragment_zenit_highscore_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="13%"
        app:layout_heightPercent="7%"
        android:background="@drawable/postit_green_selected"
        android:text="@string/zenit_easy"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/fragment_zenit_highscore_view_selected"
        android:layout_alignTop="@id/framelayout_in_fragment_zenit_highscore"
        android:textSize="@dimen/highscore_buttons_textSize"
        />

    <Button
        android:textSize="@dimen/highscore_buttons_textSize"
        android:id="@+id/fragment_zenit_highscore_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="12%"
        app:layout_heightPercent="7%"
        android:background="@drawable/postit_orange"
        android:text="@string/zenit_medium"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/fragment_zenit_highscore_view"
        android:layout_below="@id/fragment_zenit_highscore_easy"
        />

    <Button
        android:textSize="@dimen/highscore_buttons_textSize"
        android:id="@+id/fragment_zenit_highscore_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="12%"
        app:layout_heightPercent="7%"
        android:background="@drawable/postit_red"
        android:text="@string/zenit_hard"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/fragment_zenit_highscore_view"
        android:layout_below="@id/fragment_zenit_highscore_medium"
        />

</android.support.percent.PercentRelativeLayout>